2024-11-05T12:14:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11683926726 # 631
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-05
* notice: last 14d: unq all: 19 66
* notice: prev accum: outdated-unq outdated-all / unq all: 859 4672 / 878 4729
* notice: next accum: outdated-unq outdated-all / unq all: 859 4672 / 879 4738
* notice: prev exec diff / last date diff / accum: unq all: +1 +9 -0 -0 / +1 +9 -0 -0 / 1 9
* notice: removed / changed dates: [] / [2024-11-05]

2024-11-05T00:36:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11675249973 # 630
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-05
* notice: last 14d: unq all: 18 57
* notice: prev accum: outdated-unq outdated-all / unq all: 859 4672 / 876 4725
* notice: next accum: outdated-unq outdated-all / unq all: 859 4672 / 878 4729
* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -0 / +4 +6 -0 -0 / 4 6
* notice: removed / changed dates: [] / [2024-11-04]

2024-11-04T12:14:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11663993951 # 629
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-04
* notice: last 14d: unq all: 16 53
* notice: prev accum: outdated-unq outdated-all / unq all: 858 4671 / 874 4723
* notice: next accum: outdated-unq outdated-all / unq all: 859 4672 / 876 4725
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2024-10-21] / [2024-11-04]

2024-11-04T00:38:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11656096869 # 628