@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-11-05T12:14:08Z",
-  "count_outdated" : 4672,
-  "uniques_outdated" : 859,
+  "timestamp" : "2024-11-07T00:36:24Z",
+  "count_outdated" : 4676,
+  "uniques_outdated" : 862,
   "count" : 4738,
   "uniques" : 879,
   "views" : [
-    {
-      "timestamp": "2024-10-23T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2024-10-24T00:00:00Z",
       "count": 4,
