@@ -1,12 +1,7 @@
 {
-  "count": 66,
-  "uniques": 19,
+  "count": 62,
+  "uniques": 16,
   "views": [
-    {
-      "timestamp": "2024-10-23T00:00:00Z",
-      "count": 4,
-      "uniques": 3
-    },
     {
       "timestamp": "2024-10-24T00:00:00Z",
       "count": 4,
