@@ -1,3 +1,12 @@
+2024-11-07T00:36:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11714333813 # 634
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-07
+* notice: last 14d: unq all: 16 62
+* notice: prev accum: outdated-unq outdated-all / unq all: 859 4672 / 879 4738
+* notice: next accum: outdated-unq outdated-all / unq all: 862 4676 / 879 4738
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-10-23] / []
+
 2024-11-05T12:14:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11683926726 # 631
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-05
